dev/nginx-webserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: dev
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
