dev/webserver-virtualService.yml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
  - nginx-webserver..dev.svc.cluster.local
  http:
  - route:
    - destination:
        host: nginx-webserver..dev.svc.cluster.local
        subset: v1
